- Can use charm flag to control PTW-like artillery targeting
- Option to ignore king flag on defense, so kings aren't always last to defend in a stack
- Harbor/airport city icons indicate unit effects not trade abilities

* RELEASE 15
- Option to replay AI moves for human players in hotseat mode
- Enable stealth attacks via bombardment
- Artillery can be set to use PTW-like targeting against cities
- Recon missions can be made vulnerable to interception
- Option to charge one move for recon missions and interception
- Allow players to opt out of stealth attacks
- Polish precision striking by land or sea units
  - Use regular bombard animation instead of flying animation
  - Use bombard range instead of operational range
  - Cannot be intercepted
- Message appears after bomber dodges interception by air defense buildings
- Restore unit directions on game load
- Option to immunize aircraft against bombardment
- Disallow stealth attack against single unit by default
  - Fixes a compatibility issue with the EFZI mod
- L key unloads unit over activating AI city loc highlighter
- Show AI strategy in production ranking for unit types with multiple strategies
- Tweak messages on bankruptcy popups

* RELEASE 14
- Automatically cut research spending to avoid bankruptcy
- Option to aggressively penalize bankrupt players
  - Sells non-gold-generating buildings, non-free units, and switches city production to Wealth
- Remove pause for "we love the king" messages
- Holding shift while a stack bombard is going will temporarily turn off combat animations
- Fix units could trespass by attacking an enemy unit across a restricted border
- Widen C3X error, info, and warning popups
- Warn if two-city start contains adjacent cities or missing FP cities
- Gold amount autofill activates when editing an amount on the table
- Option to remove exception to tile penalty for city tiles with fresh water and Agri trait
- Suppress "maximum hypertext links exceeded" popup