@@ -295,6 +295,8 @@ repl call, 0x4A133D,	0x4A7EED,	0x4A13CD,	"Unit_check_king_for_defense_priority",
 repl call, 0x4A144C,	0x4A7FFC,	0x4A14DC,	"Unit_check_king_for_defense_priority",		""
 repl call, 0x4A1477,	0x4A8027,	0x4A1507,	"Unit_check_king_for_defense_priority",		""
 repl call, 0x4A149F,	0x4A804F,	0x4A152F,	"Unit_check_king_for_defense_priority",		""
+repl call, 0x598EC5,	0x0,		0x0,		"get_local_time_for_unit_ini",			""
+repl call, 0x598AEC,	0x0,		0x0,		"get_local_time_for_unit_ini",			""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
