@@ -22,6 +22,10 @@ reverse_specialist_order_with_shift = true
 ; on units that aren't intended to be actual kings. This setting helps by bypassing the king unit naming logic when regicide is not enabled.
 dont_give_king_names_in_non_regicide_games = true
 
+; One of the game's "Easter eggs" is that all king-flagged units appear as Elvis Presley on his birthday (Jan 8). This can be annoying when playing
+; mods that make wide use of the king flag.
+no_elvis_easter_egg = false
+
 ; Removes option to automate workers from the human player. Useful for those who never want to use automation but sometimes accidentally activate it.
 disable_worker_automation = false
 
